Now built against IDEA 2020.1.4 (was 2019.1.4).